if (${PXR_ENABLE_GL_SUPPORT})
#	add_subdirectory(hdStormGL)
endif()
if (${PXR_ENABLE_METAL_SUPPORT})
	add_subdirectory(hdStormMetal)
endif()
if (${PXR_BUILD_EMBREE_PLUGIN})
    add_subdirectory(hdEmbree)
endif()
if (${PXR_BUILD_PRMAN_PLUGIN} AND "${RENDERMAN_VERSION_MAJOR}" GREATER "22")
    add_subdirectory(hdPrmanLoader)
endif()
if (PXR_BUILD_OPENIMAGEIO_PLUGIN)
    add_subdirectory(HioOiio)
endif()
if (PXR_ENABLE_OPENVDB_SUPPORT)
    add_subdirectory(hioOpenVDB)
endif()
if (PXR_BUILD_BASISU_PLUGIN)
    add_subdirectory(HioBasisUniversal)
endif()
